# MDRack

./: .gitignore  AGENTS.md  LICENSE  README.md  fix_read.py  mdrack.spec  pyproject.toml
.github/workflows/: offline-release-matrix.yml
configs/: eval-v11.toml
docs/: architecture.md  chunking-refactor-plan.md  cli-contracts.md  mdrack-v0.2-retrieval-modernization-plan.md  model-management-plan-3.md  offline-release-verification.md  optional-provider-contracts.md  plan.md  recovery.md  release-1.1.md  remediation-plan.md  retrieval-design.md  storage-design.md  windows-exe-build.md
docs/compatibility/: v0.3-compatibility-registry.md  v0.4-future-host-consumer-ledger.md  v0.4-public-surface-ledger.json  v1.1-compatibility-ledger.md
docs/contracts/: prepared-resource-manifest-v1.md  prepared-resource-manifest-v1.schema.json  v0.4-w5-ci-contract.md  v1.1-application-contract.md  v1.1-artifact-cache.md  v1.1-frame-captions.md  v1.1-metadata.md  v1.1-search-presets.md  v1.1-transcript-readers.md  v1.2-unified-search.md
docs/current-architecture/: README.md  assets.md  indexing-and-chunking.md  limitations.md  public-interfaces.md  retrieval.md  sqlite-persistence.md  system-overview.md
docs/decisions/: 0001-reranking-deferred.md  0002-provider-storage-neutral-core.md  0003-core-1.0-rc-contract.md  0004-sqlite-operating-envelope.md  0005-timed-text-granularity.md  0006-temporal-locator-specification.md  0007-no-overlap-default.md  0008-whole-resource-text-aggregation.md  0009-text-only-media-capability.md  0010-clean-standalone-sqlite-catalog.md  0011-v1.1-application-contracts.md
docs/evaluation/: privacy-evidence-oracle.md  public-corpus-contract-v1.md  v1.1-fixture-contract.md  v1.1-quality-observations.md  w4-quality-evidence.md  w5-sqlite-envelope.json  w5-sqlite-envelope.md
docs/evidence/: v0.2-baseline.md  v0.2-release-gate.json  v0.3-release-gate.json  v0.3-release-gate.md  v0.3.1-release-gate.json  v0.3.1-release-gate.md  v0.4-release-packet.json  v0.4-release-packet.md  v1.1-entry-gate.md  v1.1-offline-evaluation.md  w5-offline-release-matrix.json  w5-offline-release-matrix.md
docs/guides/: v1.1-cache.md  v1.1-metadata.md  v1.1-offline-workflows.md  v1.1-timed-media.md
docs/plans/: 2026-07-16-v0.2-stabilization.md  2026-07-17-architecture-documentation-hardening.md  2026-07-17-v0.3-clean-core.md  2026-07-18-v0.3.1-audit-hardening.md  2026-07-18-v0.4-text-media-development-plan.md  2026-07-20-v1.1-implementation-plan.md  2026-07-22-v1.2-unified-search.md  2026-07-24-v1.3-compact-storage-sqlite-vec.md
instructions/: ARCH.system.instructions.md  DATA.sqlite.instructions.md  DOCS.architecture.instructions.md  DOCS.instruction-style-guide.instructions.md  OBS.logging.instructions.md  TEST.quality-gates.instructions.md  TOOLING.mcp-instrument.instructions.md  WORKFLOW.build-orchestration.instructions.md  WORKFLOW.git-safety.instructions.md  WORKFLOW.plan-orchestration.instructions.md  WORKFLOW.requirements-to-spec.instructions.md
scripts/: baseline_compare.py  build_v11_test_assets.py  build_windows_exe.ps1  check_core_boundaries.py  check_core_distribution.py  check_installed_package.py  check_media_boundaries.py  check_no_forbidden_deps.py  check_release_docs.py  check_sqlite_boundaries.py  chunk_audit.py  live_lmstudio_eval.py  media_quality_eval.py  offline_release_matrix.py  retrieval_benchmark.py  run_v11_evaluation.py  run_v11_offline_e2e.py  sqlite_envelope_benchmark.py  verify.ps1  verify.sh
src/mdrack/: __init__.py  __main__.py
src/mdrack_core/: __init__.py  observability.py
tests/: privacy_oracle.py  render_chunk_debug.py  test_version.py
tests/cli/: test_cli_cache.py  test_cli_doctor.py  test_cli_eval.py  test_cli_files.py  test_cli_help.py  test_cli_images.py  test_cli_metadata.py  test_cli_model.py  test_cli_read.py  test_cli_rebuild.py  test_cli_resource_manifest.py  test_cli_resources.py  test_cli_scan.py  test_cli_search_semantic_fake.py  test_cli_search_text.py  test_cli_sections.py  test_cli_status.py  test_cli_storage_analyzer.py  test_cli_transcript.py  test_cli_video.py
tests/core/: test_audio_retrieval_evidence.py  test_contract_freeze.py  test_domain_records.py  test_fusion.py  test_indexing.py  test_metadata_facet_contract.py  test_observability.py  test_resource_discovery.py  test_resource_store_contract.py  test_retrieval.py  test_shared_contracts.py  test_v11_contract_freeze.py
tests/e2e/: conftest.py  test_cli_embedded_retrieval_parity.py  test_embedded_api.py  (+9 more)
tests/fixtures/future_host/: host_consumer.py  pyproject.toml
(+340 files in other folders)
