[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdrack"
version = "0.2.0"
description = "Local command-line Markdown knowledge rack for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "toml>=0.10",
    "rich>=13.0",
    "httpx>=0.27",
    "markdown-it-py>=4.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mdrack = "mdrack.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/mdrack"]

[tool.hatch.build.targets.sdist]
exclude = ["/docs/evidence/v0.2-release-gate.json"]
