[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdrack"
version = "0.3.0"
description = "Local command-line Markdown knowledge rack for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mdrack-core==1.0.0rc1",
    "mdrack-media==1.0.0rc1",
    "mdrack-sqlite==1.0.0rc1",
    "click>=8.1",
    "pydantic>=2.0",
    "toml>=0.10",
    "rich>=13.0",
    "httpx>=0.27",
    "markdown-it-py>=4.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mdrack = "mdrack.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["mdrack", "mdrack_core", "mdrack_media", "mdrack_sqlite"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Reproducible offline lanes:
#   pytest -m unit; pytest -m e2e; pytest -m privacy;
#   pytest -m no_live_default; pytest -m 'not e2e and not privacy'
markers = [
    "unit: deterministic unit tests using local fixtures and fakes",
    "e2e: offline end-to-end tests using local components and fakes",
    "privacy: privacy and evidence-surface contract tests",
    "no_live_default: tests enforcing that live/provider execution is never the default",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mdrack"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.hermes",
    "/.release-artifacts",
    "/docs/evidence/*.json",
    "/docs/evidence/*.md",
    "/packages",
]

[tool.uv.sources]
mdrack-core = { workspace = true }
mdrack-media = { workspace = true }
mdrack-sqlite = { workspace = true }

[tool.uv.workspace]
members = ["packages/mdrack-core", "packages/mdrack-media", "packages/mdrack-sqlite"]
