[project]
name = "mdrack-future-host-fixture"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mdrack-core==1.0.0rc1",
    "mdrack-media==1.0.0rc1",
    "mdrack-sqlite==1.0.0rc1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["host_consumer"]
